# bird_password

./: Cargo.toml  Dockerfile  LICENSE  bird_names.txt
assets/: style.css
src/: lib.rs  main.rs
