[package]
name = "bird_password"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
polars = { version = "0.36", features = ["lazy", "csv", "strings"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
tracing-actix-web = "0.7.19"
actix-cors = "0.7.1"
