[package]
name = "bird_password"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-web = { version = "4", optional = true }
actix-files = { version = "0.6", optional = true }
polars = { version = "0.36", features = ["lazy", "csv", "strings"], optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
tracing-actix-web = { version = "0.7.19", optional = true }
actix-cors = { version = "0.7.1", optional = true }
leptos = "0.6"
leptos_meta = "0.6"
leptos_actix = { version = "0.6", optional = true }
leptos_router = "0.6"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
cfg-if = "1.0"
http = "1.0"

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "dep:actix-web",
    "dep:actix-files",
    "dep:leptos_actix",
    "dep:polars",
    "dep:rand",
    "dep:tracing-actix-web",
    "dep:actix-cors",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[package.metadata.leptos]
output-name = "bird_password"
site-root = "target/site"
assets-dir = "assets"
site-addr = "0.0.0.0:8080"
watch = false
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
